--- a/development_app/templates/index.html
+++ b/development_app/templates/index.html
@@ -5,10 +5,13 @@
     <title>Departments</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      {% block title %}
+
+      {% endblock %} | Flask app
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="add">Departments </a>
+      <a class="navbar-brand" href="dep">Departments </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,5 +36,19 @@
         </form>
       </div>
     </nav>
+
+<div class="container">
+  <div class="row">
+    <h1>
+          {% block content_title %}
+
+          {% endblock %}
+    </h1>
+        {% block content %}
+
+        {% endblock %}
+  </div>
+</div>
+
 </body>
 </html>
