added page for employees, ceated html-tables

--- a/development_app/templates/index.html
+++ b/development_app/templates/index.html
@@ -5,13 +5,10 @@
     <title>Departments</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-      {% block title %}
-
-      {% endblock %} | Flask app
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="dep">Departments </a>
+      <a class="navbar-brand" href="{{url_for('departments')}}">Departments </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="kek">Lol <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{url_for('employees')}}">Employees <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="lol">Kek <span class="sr-only">(current)</span></a>
@@ -38,7 +35,6 @@
     </nav>
 
 <div class="container">
-  <div class="row">
     <h1>
           {% block content_title %}
 
@@ -47,7 +43,6 @@
         {% block content %}
 
         {% endblock %}
-  </div>
 </div>
 
 </body>
