--- a/development_app/templates/employees.html
+++ b/development_app/templates/employees.html
@@ -1,8 +1,26 @@
 {% extends "index.html" %}
 
+
+{% block extra_references %}
+    {% if not all %}
+        <li class="nav-item active">
+            <a class="nav-link" href="{{url_for('add_employee', slug = dep.slug)}}">
+                Add employees to {{dep.name}}
+                <span class="sr-only">
+                    (current)
+                </span>
+            </a>
+        </li>
+    {% endif %}
+{% endblock %}
+
 {% block content_title %}
     <div class = "department">
-        Employees of {{dep}}
+        {% if all %}
+            Employees of {{dep}}
+        {% else %}
+            Employees of {{dep.name}}
+        {% endif %}
     </div>
 {% endblock %}
 
