--- a/development_app/templates/index.html
+++ b/development_app/templates/index.html
@@ -34,16 +34,14 @@
       </div>
     </nav>
 
-<div class="container">
-    <h1>
-          {% block content_title %}
 
-          {% endblock %}
-    </h1>
-        {% block content %}
 
-        {% endblock %}
-</div>
+{% block content_title %}
+{% endblock %}
+
+{% block content %}
+    <img src="../static/picture.png"  alt="Тут може бути ваша реклама" width="100%"/>
+{% endblock %}
 
 </body>
 </html>
