--- a/templates/title.html
+++ b/templates/title.html
@@ -23,8 +23,6 @@
             <a class="nav-link" href="{{url_for('create_department')}}">Create new department <span class="sr-only">(current)</span></a>
           </li>
           </li>
-            {% block extra_references %}
-            {% endblock %}
         </ul>
         <form class="form-inline my-2 my-lg-0" method="GET">
           <input class="form-control mr-sm-2" type="search" placeholder="Search"
@@ -34,13 +32,7 @@
       </div>
     </nav>
 
-
-
-{% block content_title %}
-{% endblock %}
-
-{% block content %}
-{% endblock %}
+    <img src="../static/picture.png" alt="Тут може бути ваша реклама" width="100%"/>
 
 </body>
 </html>
