--- a/templates/departments.html
+++ b/templates/departments.html
@@ -21,7 +21,8 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Name</th>
-          <th scope="col">Slug</th>
+          <th scope="col">Average Salary</th>
+          <th scope="col">URL</th>
         </tr>
       </thead>
         <tbody>
@@ -33,6 +34,7 @@
                     {{deps[i].name}}
                   </a>
               </td>
+              <td>{{salaries[i][1]}}</td>
               <td>{{deps[i].slug}}</td>
             </tr>
         {% endfor %}
