--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,11 @@
 {% endblock %}
 
 {% block content %}
+    <div class="container">
+      <h1>
+        Hello world!
+      </h1>
+    </div>
 {% endblock %}
 
 </body>
