--- a/templates/employee.html
+++ b/templates/employee.html
@@ -1,5 +1,16 @@
 {% extends "index.html" %}
 
+{% block extra_references %}
+        <li class="nav-item active">
+            <a class="nav-link" href="{{url_for('edit_employee', slug = employee.slug)}}">
+                Edit
+                <span class="sr-only">
+                    (current)
+                </span>
+            </a>
+        </li>
+{% endblock %}
+
 {% block content_title %}
 {{employee.name}} {{employee.surname}}
 {% endblock %}
