--- a/templates/edit_department.html
+++ b/templates/edit_department.html
@@ -25,4 +25,13 @@
         </form>
     </div>
 </div>
+<div class="container">
+    <div class="col-md-4">
+        <form action="{{url_for('delete_department', slug=department.slug)}}" method="POST">
+            <button type="submit" class="btn btn-danger">
+                Delete
+            </button>
+        </form>
+    </div>
+</div>
 {% endblock %}
