--- a/templates/edit_employee.html
+++ b/templates/edit_employee.html
@@ -25,4 +25,15 @@
         </form>
     </div>
 </div>
+
+<div class="container">
+    <div class="col-md-4">
+        <form action="{{url_for('delete_employee', slug=employee.slug)}}" method="POST">
+            <button type="submit" class="btn btn-danger">
+                Delete
+            </button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
