--- a/templates/employees.html
+++ b/templates/employees.html
@@ -87,6 +87,7 @@
 </div>
 
 <div class="container">
+    <p><h3>Search employees by date of birth</h3></p>
     <div class="col-md-4">
         <form action="{{url_for('search_employees')}}" method="POST">
             {% for field in form %}
